# CoManRobotran

Real_robot_controller/: ControllersStruct.c  ControllersStruct.h  controller_loop.c
Real_robot_controller_2/headers/: controller_def.h
SfunctionsR/src_user/controller_files/: controller_init.c  get_ref.c
SfunctionsR/src_user/simulation_files/: controller_outputs.c  init_GCM.c  simu_controller_loop.c  simu_def.h
SfunctionsR/src_user/user_files/: userDef.h  user_Derivative.c  user_ExtForces.c  user_cons_jdqd.c  user_sf_IO.h
Standalone/: CMakeLists.txt
Standalone/src/: CMakeLists.txt
Standalone/src/generic/main_files/: finish_simulation.c  init_simulation.c  loop_simulation.c  loop_simulation.cpp  main_simulation.h  model_main.c  model_main.cpp
Standalone/src/generic/mbs_load_xml/: freeMBSdata_xml.c  loadMBSelements_xml.c  loadMBSutilities_xml.c
Standalone/src/generic/robotran/: LocalDataStruct.c  LocalDataStruct.h  MBSdataStruct.h  MBSdef.h  MBSfun.h  choldc.c  cholsl.c  lubksb.c  ludcmp.c  lut.c  lut.h  mbs_close_loops.c  mbs_dirdynared.c  mbs_matrix.c  mbs_matrix.h  mbs_tool.c  mbs_tool.h  norm.c  nrfct.h  nrutil.c  nrutil.h  svbksb.c  svdcmp.c
Standalone/src/generic/simbody/: SimbodyBodiesStruct.c  SimbodyBodiesStruct.h  simbody_cpp_functions.cpp  simbody_cpp_functions.hpp  simbody_functions.c  simbody_functions.h
Standalone/src/other/opti/code_generation/: CMakeLists.txt
Standalone/src/other/opti/code_generation/OptiParams/: OptiParam.txt
Standalone/src/other/opti/code_generation/src/: cmake_config_opti.h.in  code_generation.h  generate_erase_opti.c  generate_get_real_params.c  generate_init_opti.c  generate_main.c  generate_opti_def.c  generate_opti_results.c  get_nb_params.c
Standalone/src/other/outVectors/: output_vector_2.txt
Standalone/src/project/: Model_standalone.mbsdata
Standalone/src/project/controller_files/: init_opti_ctrl.c
Standalone/src/project/project_files/: configure_sdl.c  events_sdl.c  project_info.h
Standalone/src/project/simulation_files/: controller_inputs.c  fitness.c  impedance_controller.c  init_actuator_model.c  init_opti_simu.c  simu_outputs.c  simu_useful_functions.c  stop_simu.c
Standalone/src/project/symbolicR/: mbs_dirdyna_CoMan_23Dof_V4.m  mbs_invdyna_CoMan_23Dof_V4.c
Standalone/src/project/user_files/: UserModelStruct.c  UserModelStruct.h  user_DrivenJoints.c  user_JointForces.c  user_Link3Dforces.c  user_Linkforces.c  user_compute_output.c  user_cons_hJ.c  user_initialization.c  (+1 more)
animationR/vrml/: cache_foot.wrl  coman_foot_left.wrl  coman_foot_right.wrl
dataR/: CoMan_23Dof_V4.mbs
dataR/CoMan_versions/Compliant_feet/: CoMan_23Dof_V4.mbs
symbolicR/: mbs_accelred_CoMan_23Dof_V4.c  mbs_accelred_CoMan_23Dof_V4.m  mbs_dirdyna_CoMan_23Dof_V4.c  mbs_extforces_CoMan_23Dof_V4.c  mbs_extforces_CoMan_23Dof_V4.m  mbs_link_CoMan_23Dof_V4.c  mbs_sensor_CoMan_23Dof_V4.c  mbs_sensor_CoMan_23Dof_V4.m  stdout.txt
userfctR/: user_Derivatives.m  user_DirDyn_io.m  user_DrivenJoints.m  user_Equil_io.m  user_ExtForces.m  user_GroundLevel.m  user_InvDyn_io.m  user_JointForces.m  user_LinkForces.m  user_SolveKin_io.m  user_cons_hJ.m  user_cons_jdqd.m
workR/: call_simulink.m  compile_c_files.m  control_variables.m  dirdyna_CoMan_23Dof_V4.mdl  generate_mbs_data.m  get_CoMan_indexes.m  save_compile.mat  simu_ctrl_files.m  simu_variables.m  synchronize_versions.m
(+31 files in other folders)
